upgrading to 1.11.1 across the board, removing unecessary rebooting on the machines during installation
Change-Id: I9bb65b9671f5f16aff7075c5b1da3e14c2ca7340

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,9 @@ tmp/
 
 .gitcookies
 
+# Newrelic agent log
+newrelic_agent.log
+
 # test
 
 # Folder to hold build-artifacts needed for Docker install (maybe all)
