Adding functionality to encrypt/decrypt pki
Change-Id: I9f9d7e4b1330b1af59baee367e90184976a87cea

--- a/all-get-login-tokens.yml
+++ b/all-get-login-tokens.yml
@@ -1,5 +1,12 @@
 
 - hosts: workers
+  gather_facts: false
+  pre_tasks:
+  - name: Decrypt SSH key
+    include_role:
+      name: decrypt-ssh-key
+  - name: Gathering Facts
+    setup: {}
   roles:
     - abm-login-token
   vars:
