--- a/all-full-install.yml
+++ b/all-full-install.yml
@@ -5,6 +5,13 @@
 - hosts: all
   become: true
   become_user: root
+  gather_facts: false
+  pre_tasks:
+  - name: Decrypt SSH key
+    include_role:
+      name: decrypt-ssh-key
+  - name: Gathering Facts
+    setup: {}
   roles:
     - validate
     - google-tools
