--- a/all-install-abm-software.yml
+++ b/all-install-abm-software.yml
@@ -4,6 +4,13 @@
 - hosts: workers
   become: true
   become_user: root
+  gather_facts: false
+  pre_tasks:
+  - name: Decrypt SSH key
+    include_role:
+      name: decrypt-ssh-key
+  - name: Gathering Facts
+    setup: {}
   roles:
     - abm-software
     - abm-login-token
@@ -14,6 +21,12 @@
 - hosts: cloud_type_abm
   become: true
   become_user: root
+  pre_tasks:
+  - name: Decrypt SSH key
+    include_role:
+      name: decrypt-ssh-key
+  - name: Gathering Facts
+    setup: {}
   roles:
     - abm-software
     - abm-login-token
