--- a/all-remove-abm-software.yml
+++ b/all-remove-abm-software.yml
@@ -8,6 +8,13 @@
 - hosts: workers
   become: true
   become_user: root
+  gather_facts: false
+  pre_tasks:
+  - name: Decrypt SSH key
+    include_role:
+      name: decrypt-ssh-key
+  - name: Gathering Facts
+    setup: {}
   roles:
     - abm-remove
   vars: []
@@ -17,6 +24,12 @@
 - hosts: cloud_type_abm
   become: true
   become_user: root
+  pre_tasks:
+  - name: Decrypt SSH key
+    include_role:
+      name: decrypt-ssh-key
+  - name: Gathering Facts
+    setup: {}
   roles:
     - abm-remove
   vars: []
