--- a/all-update-servers.yml
+++ b/all-update-servers.yml
@@ -4,6 +4,13 @@
 - hosts: workers
   become: true
   become_user: root
+  gather_facts: false
+  pre_tasks:
+  - name: Decrypt SSH key
+    include_role:
+      name: decrypt-ssh-key
+  - name: Gathering Facts
+    setup: {}
   roles:
     - update
   vars: []
@@ -13,6 +20,12 @@
 - hosts: cloud_type_abm
   become: true
   become_user: root
+  pre_tasks:
+  - name: Decrypt SSH key
+    include_role:
+      name: decrypt-ssh-key
+  - name: Gathering Facts
+    setup: {}
   roles:
     - update
   vars: []
