--- a/all-verify.yml
+++ b/all-verify.yml
@@ -2,5 +2,12 @@
 - hosts: all
   become: true
   become_user: root
+  gather_facts: false
+  pre_tasks:
+  - name: Decrypt SSH key
+    include_role:
+      name: decrypt-ssh-key
+  - name: Gathering Facts
+    setup: {}
   roles:
     - validate
