--- a/inventory/host_vars/nuc-1.yaml
+++ b/inventory/host_vars/nuc-1.yaml
@@ -5,26 +5,26 @@ machine_label: "nuc-1"
 # Indicates that this is the primary machine in the cluster (only important for provisioning)
 primary_cluster_machine: true
 # Name of the "store" per the ACM repo
-acm_cluster_name: "{{ lookup('env', 'CLUSTER_ACM_NAME') | default('nuc-1', True) }}"
+acm_cluster_name: "{{ lookup('env', 'CLUSTER_ACM_NAME') | default('location-1', True) }}"
 # This machine's IP
-control_plane_ip: "192.168.1.11"
+control_plane_ip: "192.168.2.10"
 # The other IPs in the cluster
 control_plane_ips: [
-  "192.168.1.11",
-  "192.168.1.12",
-  "192.168.1.13"
+  "192.168.2.10",
+  "192.168.2.11",
+  "192.168.2.12"
 ]
 # KubeAPI IP address
-control_plane_vip: "192.168.1.120"
+control_plane_vip: "192.168.2.100"
 # Ingress (k8s) address, must be in LoadBalancer pool below
-ingress_vip: "192.168.1.121"
+ingress_vip: "192.168.2.101"
 # Load balancers created in this range
 load_balancer_pool_cidr: [
-  "192.168.1.121-192.168.1.129"
+  "192.168.2.101-192.168.2.121"
 ]
 
 # Floating IP addresses for Network Gateway Group
 ang_floating_ips: [
-  "192.168.1.17",
-  "192.168.1.18"
+  "192.168.2.17",
+  "192.168.2.18"
 ]
