Upgrade Longhorn to 1.3.0
Change-Id: I8c0ca8acad6140f102e89d88e5ea9b8e6af5d425

--- a/roles/abm-software/tasks/csi-longhorn.yaml
+++ b/roles/abm-software/tasks/csi-longhorn.yaml
@@ -8,6 +8,11 @@
     if [ -z "$HAS_SECRET" ]; then
       exit 1
     else
+      VERSION_EXISTS=$(gcloud secrets versions list {{ longhorn_secret_name }} --filter="state=enabled" --format="value(name)"  --project="{{ google_project_id }}")
+      if [ -z "${VERSION_EXISTS}" ]; then
+        # no valid versions found, need to create a new one
+        exit 1
+      fi
       exit 0
     fi
   args:
