--- a/inventory/host_vars/edge-2.yaml
+++ b/inventory/host_vars/edge-2.yaml
@@ -5,3 +5,9 @@ machine_label: "edge-2"
 
 # This machine's IP address
 control_plane_ip: "192.168.3.11"
+
+# Ansible Pull Authenticaiton String
+ansible_pull_authentication_string: "{{scm_token_user}}:{{scm_token_token}}@"
+
+# Ansible Pull repo for Remote Execution
+ansible_pull_remote_execute_repo: "https://{{ ansible_pull_authentication_string | default('', true) }}gitlab.com/gcp-solutions-public/retail-edge/remote-command-repo.git"
