Adding NFS explicit for Longhonn RWX
Change-Id: I069a288ec52853c29bd77ba108cb111878602a68

--- a/roles/ready-ubuntu/tasks/main.yml
+++ b/roles/ready-ubuntu/tasks/main.yml
@@ -32,6 +32,7 @@
     - network-manager
     - vlan
     - logrotate
+    - nfs-common
     # This is needed for Robin
     - linux-modules-extra-{{ uname_r }}
     state: present
