--- a/roles/abm-software/tasks/external-secrets.yaml
+++ b/roles/abm-software/tasks/external-secrets.yaml
@@ -50,27 +50,7 @@
   - external-secrets-operator
   - external-secrets
 
-- name: "Install External Secrets Operator (b/185519826)"
-  shell: |
-      kubectl apply -f {{ external_secrets_files }}/external-secrets-crd.yaml
-      # Allow for the API to register the API
-      sleep 5s
-      kubectl wait --for=condition=established --timeout=600s crd externalsecrets.external-secrets.io
-      exit $?
-  args:
-    executable: /bin/bash
-  environment:
-    KUBECONFIG: "{{ kubeconfig_shared_location }}"
-  when:
-    - (primary_cluster_machine is defined)
-    - (primary_cluster_machine == true)
-  retries: 3
-  register: result
-  until: result.rc == 0
-  tags:
-  - external-secrets-operator
-  - external-secrets
-
+## TODO: Move this to Pull repository?  Chicken/egg issue...no CRD, so cannot apply...SecretStore requires project ID to be injected (perhaps move to workload identity?)
 - name: Copy Secrets Manager Store
   template:
     src: external-secrets-store.yaml.j2
@@ -82,19 +62,3 @@
   - external-secrets
   - external-secrets-store
 
-- name: "Install External Secrets Operator (b/185519826)"
-  shell: |
-      kubectl apply -f {{ external_secrets_files }}/external-secrets-store.yaml
-  args:
-    executable: /bin/bash
-  environment:
-    KUBECONFIG: "{{ kubeconfig_shared_location }}"
-  when:
-    - (primary_cluster_machine is defined)
-    - (primary_cluster_machine == true)
-  retries: 3
-  register: result
-  until: result.rc == 0
-  tags:
-  - external-secrets-store
-  - external-secrets
