--- a/roles/google-tools/tasks/main.yml
+++ b/roles/google-tools/tasks/main.yml
@@ -238,12 +238,15 @@
     - optional
     - tool-install
 
-  # TODO: This can now be pulled from gsutil cp gs://anthos-baremetal-release/bmctl/{{ bmctl_version }}/linux-amd64/virtctl
-  - name: Download virtctl (kubevirt CLI)
-    get_url:
-      url: https://github.com/kubevirt/kubevirt/releases/download/{{ virtctl_version }}/virtctl-{{ virtctl_version }}-linux-amd64
-      dest: /usr/local/bin/virtctl
-      mode: '0555' # Read & Executable by all
+  ### Install virtctl via bmctl (keeps this up-to-date without explicit downloading)
+  - name: Install virtctl
+    command:
+      cmd: "bmctl install virtctl"
+    args:
+      creates: /usr/bin/kubectl-virt
+      chdir: "{{ tools_base_path }}"
+    environment:
+      PATH: "{{ tools_base_path }}/google-cloud-sdk/bin:{{ ansible_env.PATH }}"
     tags:
     - optional
     - tool-install
