unattended and gcloud update
Change-Id: I34d869062acf32bb5bf0666dde7f94fb23820736

--- a/roles/ready-ubuntu/tasks/main.yml
+++ b/roles/ready-ubuntu/tasks/main.yml
@@ -32,6 +32,8 @@
     - network-manager
     - vlan
     - logrotate
+    - unattended-upgrades
+    - apt-listchanges
     - nfs-common
     # This is needed for Robin
     - linux-modules-extra-{{ uname_r }}
