--- a/all-full-install.yml
+++ b/all-full-install.yml
@@ -15,7 +15,7 @@
   roles:
     - validate
     - google-tools
-    - update
+    - update-automation
     - ready-ubuntu
     - setup-kvm
     - abm-install
