--- a/hardware-full-install.yml
+++ b/hardware-full-install.yml
@@ -8,7 +8,7 @@
   roles:
     - validate
     - google-tools
-    - update
+    - update-automation
     - ready-ubuntu
     - setup-kvm
     - abm-install
