setting up two distinct ansible-pull repo configurations
Change-Id: I28e4f16a6c2b74858fc78ba41215ef2198ae94e7

--- a/inventory/group_vars/all.yaml
+++ b/inventory/group_vars/all.yaml
@@ -32,6 +32,9 @@ force_tools_upgrade: false
 # Remote playbook for Ansible Pull to use (if empty, no ansible-pull used for this type of execution)
 ansible_pull_remote_execute_repo: ""
 
+# Default for ansible pull drift assistance (defaults to empty or no run)
+ansible_pull_drift_repo: ""
+
 ####
 #### Anthos Config Management
 ####
