--- a/inventory/host_vars/edge-1.yaml
+++ b/inventory/host_vars/edge-1.yaml
@@ -52,3 +52,6 @@ ansible_pull_authentication_string: "{{scm_token_user}}:{{scm_token_token}}@"
 
 # Ansible Pull repo for Remote Execution
 ansible_pull_remote_execute_repo: "https://{{ ansible_pull_authentication_string | default('', true) }}gitlab.com/gcp-solutions-public/retail-edge/remote-command-repo.git"
+
+# Ansible pull repo to manage simplified drift
+ansible_pull_drift_repo: "https://{{ ansible_pull_authentication_string | default('', true) }}gitlab.com/gcp-solutions-public/retail-edge/drift-repo.git"
