adding post-install to the abm-software installation playbook
Change-Id: I0b772cefd672d445dda04c322a1677172ee4cb2e

--- a/all-install-abm-software.yml
+++ b/all-install-abm-software.yml
@@ -13,6 +13,8 @@
     setup: {}
   roles:
     - abm-software
+    - abm-post-install
+    - ansible-pull
     - abm-login-token
   vars: []
   tags:
@@ -29,6 +31,8 @@
     setup: {}
   roles:
     - abm-software
+    - abm-post-install
+    - ansible-pull
     - abm-login-token
   vars: []
   tags:
