Upgrade 1.12.1 and fix ACM
Change-Id: Ieb56cbb870a6398cd8f378a9346a8e4cf988d7f0

--- a/all-post-install.yml
+++ b/all-post-install.yml
@@ -4,6 +4,8 @@
 # This playbook is used to run post-installation of the solution, typically for bug fixes and little changes
 - hosts: all
   gather_facts: false
+  become: true
+  become_user: root
   pre_tasks:
   - name: Decrypt SSH key
     include_role:
@@ -12,5 +14,6 @@
     setup: {}
   roles:
     - abm-post-install
+    - update-automation
   vars:
     kubeconfig_shared_location: "/var/kubeconfig/kubeconfig"
