--- a/inventory/host_vars/cnuc-4.yaml
+++ b/inventory/host_vars/cnuc-4.yaml
@@ -9,7 +9,7 @@ machine_label: "cnuc-4"
 # Indicates that this is the primary machine in the cluster (only important for provisioning)
 primary_cluster_machine: true
 # Name of the "store" per the ACM repo
-acm_cluster_name: "{{ lookup('env', 'CLUSTER_ACM_NAME') | default('cnuc-4', True) }}"
+acm_cluster_name: "{{ lookup('env', 'CLUSTER_ACM_NAME') | default('location-3', True) }}"
 
 # This machine's IP
 control_plane_ip: "10.200.0.2"
@@ -28,3 +28,12 @@ ingress_vip: "10.200.0.50"
 load_balancer_pool_cidr: [
   "10.200.0.50-10.200.0.70"
 ]
+
+# Ansible Pull Authenticaiton String
+ansible_pull_authentication_string: "{{scm_token_user}}:{{scm_token_token}}@"
+
+# Ansible Pull repo for Remote Execution
+ansible_pull_remote_execute_repo: "https://{{ ansible_pull_authentication_string | default('', true) }}gitlab.com/gcp-solutions-public/retail-edge/remote-command-repo.git"
+
+# Ansible pull repo to manage simplified drift
+ansible_pull_drift_repo: "https://{{ ansible_pull_authentication_string | default('', true) }}gitlab.com/gcp-solutions-public/retail-edge/drift-repo.git"
