--- a/inventory/host_vars/cnuc-7.yaml
+++ b/inventory/host_vars/cnuc-7.yaml
@@ -1,51 +1,33 @@
 
+## Vars specifically for CNUC4
+
 # Name of the cluster
-cluster_name: "edge-1"
+cluster_name: "cnuc-7"
 # Used for logging/metrics
-machine_label: "edge-1"
+machine_label: "cnuc-7"
+
 # Indicates that this is the primary machine in the cluster (only important for provisioning)
 primary_cluster_machine: true
 # Name of the "store" per the ACM repo
-acm_cluster_name: "{{ lookup('env', 'CLUSTER_ACM_NAME') | default('location-1', True) }}"
+acm_cluster_name: "{{ lookup('env', 'CLUSTER_ACM_NAME') | default('location-5', True) }}"
+
 # This machine's IP
-control_plane_ip: "192.168.3.11"
+control_plane_ip: "10.200.0.2"
 # The other IPs in the cluster
 control_plane_ips: [
-  "192.168.3.11",
-  "192.168.3.12",
-  "192.168.3.13"
+  "10.200.0.2",
+  "10.200.0.3",
+  "10.200.0.4"
 ]
 # KubeAPI IP address
-control_plane_vip: "192.168.3.100"
+control_plane_vip: "10.200.0.49"
 # Ingress (k8s) address, must be in LoadBalancer pool below
-ingress_vip: "192.168.3.20"
+ingress_vip: "10.200.0.50"
+
 # Load balancers created in this range
 load_balancer_pool_cidr: [
-  "192.168.3.20-192.168.3.30" # 9 IPs for LB + 1 Ingress
+  "10.200.0.50-10.200.0.70"
 ]
-
-###
-###  ANG & VPN Details
-###
-network_gateway_group_install: true
-# Install MultiClusterConfig (needed for VPN)
-network_gateway_mcc: true
-# Egress IP
-egress_cluster_ip: "172.92.230.159" # `curl ifconfig.me`
-# Floating IP addresses for Network Gateway Group
-ang_floating_ips: [
-  "192.168.3.14",
-  "192.168.3.15"
-]
-# IP addresses of the VPN Gateways
-vpn_gateway_ips: [
-  "35.242.104.21"
-]
-# IKE secret
-ike_key_secret_value: "12345"
-
-# Install observability using Legacy agents (override)
-install_observability: false # skip observability on install
 
 # Ansible Pull Authenticaiton String
 ansible_pull_authentication_string: "{{scm_token_user}}:{{scm_token_token}}@"
