--- a/roles/abm-post-install/tasks/main.yml
+++ b/roles/abm-post-install/tasks/main.yml
@@ -78,7 +78,7 @@
 
 - name: "Wait on ClusterSecretStore to exist applied by RootRepo"
   command:
-      cmd: kubectl wait --for=condition=established --timeout=600s crd clustersecretstores.external-secrets.io
+    cmd: kubectl wait --for=condition=established --timeout=600s crd clustersecretstores.external-secrets.io
   retries: 5
   delay: 10
   register: result
@@ -92,6 +92,10 @@
 - name: "Run ClusterSecretStore ExternalSecrets post ACM install (wait on ACM to be consistent)" # By this time, the ACM and RootRepo should be installed and configured...retry and wait just-in-case
   command:
     cmd: "kubectl apply -f {{ external_secrets_files }}/external-secrets-store.yaml"
+  retries: 5
+  delay: 10
+  register: cscresult
+  until: cscresult.rc == 0
   environment:
     KUBECONFIG: "{{ kubeconfig_shared_location }}"
   when:
