Disabling auditd until further investigation
Change-Id: I2396a91760f0028375d71ad3e83430b2599d6a54

--- a/inventory/group_vars/all.yaml
+++ b/inventory/group_vars/all.yaml
@@ -103,6 +103,9 @@ enable_vmruntime: true
 # Base folder to place configuration and installation items for ABM
 abm_install_folder: "/var/abm-install"
 
+# Auditd Control
+enable_auditd: false
+
 ###
 ### Default Ansible configuration variables
 ###
