--- a/inventory/group_vars/cloud_type_abm.yaml
+++ b/inventory/group_vars/cloud_type_abm.yaml
@@ -4,7 +4,7 @@
 is_cloud_resource: true
 
 # Use QEMU emulation on devices belonging to the cloud
-kubevirt_use_emulation: true
+kubevirt_use_emulation: false
 
 # Network Gateway Group IPs
 ang_floating_ips: [
