Ability to take precache bundle and explode on all machines
Change-Id: I9b714ffbdd1e1c9a959438b2c03cde7475bcf1a5

--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,8 @@ tmp/
 # Newrelic agent log
 newrelic_agent.log
 
-# test
+# pre-cached bundle, do not commit if found
+bundle.zip
 
 # Folder to hold build-artifacts needed for Docker install (maybe all)
 # keep the .gitkeep file, but ignore everything else
