--- a/roles/google-tools/tasks/main.yml
+++ b/roles/google-tools/tasks/main.yml
@@ -49,8 +49,22 @@
   - name: Download and unarchive kubectx
     unarchive:
       src: 'https://github.com/ahmetb/kubectx/releases/download/v{{ kubectx_version }}/kubectx_v{{ kubectx_version }}_linux_x86_64.tar.gz'
-      dest: '{{ tools_base_path }}/google-cloud-sdk/bin/'
-      creates: '{{ tools_base_path }}/google-cloud-sdk/bin/kubectx'
+      dest: '/usr/local/bin'
+      include: 'kubectx'
+      mode: "0755"
+      creates: '/usr/local/bin/kubectx'
+      remote_src: yes
+    tags:
+    - initial-install
+    - tool-install
+
+  - name: Download and unarchive kubens
+    unarchive:
+      src: 'https://github.com/ahmetb/kubectx/releases/download/v{{ kubectx_version }}/kubens_v{{ kubectx_version }}_linux_x86_64.tar.gz'
+      dest: '/usr/local/bin'
+      include: 'kubens'
+      mode: "0755"
+      creates: '/usr/local/bin/kubens'
       remote_src: yes
     tags:
     - initial-install
@@ -100,16 +114,6 @@
       - { app: kpt }
       - { app: kubectl }
       - { app: kubectl-oidc }
-    tags:
-    - initial-install
-    - tool-install
-
-  - name: Download and unarchive kubens
-    unarchive:
-      src: 'https://github.com/ahmetb/kubectx/releases/download/v{{ kubectx_version }}/kubens_v{{ kubectx_version }}_linux_x86_64.tar.gz'
-      dest: '{{ tools_base_path }}/google-cloud-sdk/bin/'
-      creates: '{{ tools_base_path }}/google-cloud-sdk/bin/kubens'
-      remote_src: yes
     tags:
     - initial-install
     - tool-install
