moved variable to broad all scope, default to off. Added PS1
Change-Id: I3617ad858a32464bed64c9a59571319548469b02

--- a/inventory/group_vars/all.yaml
+++ b/inventory/group_vars/all.yaml
@@ -69,6 +69,12 @@ scm_token_token: "{{ lookup('env', 'SCM_TOKEN_TOKEN') }}"
 # Anthos Config Management version
 acm_version: "1.12.2"
 
+###
+### Use the "pre-cache" bundle instead of downloading binaries from outside (does not include containers)
+###     DEFAULT = false
+###
+must_use_precache: false
+
 ####
 #### Anthos Network Gateway
 ####
