Proper ansible vs shell, removed reboot
Change-Id: Icc69bcd36ce03bedf34a2d6f86fe3505faa864e9
Bug: 246330565

--- a/roles/ready-ubuntu/tasks/main.yml
+++ b/roles/ready-ubuntu/tasks/main.yml
@@ -36,9 +36,9 @@
     - unattended-upgrades
     - apt-listchanges
     - nfs-common
-    # This is needed for Robin
-    - linux-modules-extra-{{ uname_r }}
-    state: present
+    # This is needed for TODO: Move this to Robin install only
+    # - linux-modules-extra-{{ uname_r }}
+    state: latest
     update_cache: yes
   tags:
     - update-dependencies
