--- a/roles/abm-software/vars/main.yml
+++ b/roles/abm-software/vars/main.yml
@@ -8,6 +8,7 @@ vmruntime_config_path: "/var/vmruntime"
 external_secrets_files: "/var/external-secrets"
 
 root_repository_git_auth_type: "{{ acm_repo_type }}"
+# GSA Created and granted permissions in `all.yaml`
 root_repository_service_account_email: source-repo-agent@{{ google_project_id }}.iam.gserviceaccount.com
 
 # NOTE: This is a tight coupling with the "Root Repo" that contains "ExternalSecret" instances with the `git-creds` name
