--- a/roles/abm-software/tasks/main.yml
+++ b/roles/abm-software/tasks/main.yml
@@ -13,7 +13,10 @@
     that:
       - scm_token_user != ""
     fail_msg: "The local environment variable 'SCM_TOKEN_USER' needs to be defined for the target Google Project ID"
-  when: "(primary_cluster_machine is defined) and (primary_cluster_machine == true)"
+  when:
+  - "primary_cluster_machine is defined"
+  - "primary_cluster_machine == true"
+  - "root_repository_git_auth_type == 'token'"
   tags:
   - verify
 
@@ -22,7 +25,10 @@
     that:
       - scm_token_token != ""
     fail_msg: "The local environment variable 'SCM_TOKEN_TOKEN' needs to be defined for the target Google Project ID"
-  when: "(primary_cluster_machine is defined) and (primary_cluster_machine == true)"
+  when:
+  - "primary_cluster_machine is defined"
+  - "primary_cluster_machine == true"
+  - "root_repository_git_auth_type == 'token'"
   tags:
   - verify
 
