removing utilities folder full of tech debt, added hashes for pip
Change-Id: I5404b036da046646cc7ccfc27038562b86b2a864
Bug: 242563010

--- a/docker-build/Dockerfile
+++ b/docker-build/Dockerfile
@@ -50,7 +50,7 @@ VOLUME [ "/var/consumer-edge-install" ]
 
 # Setup Ansible and other PIP-based dependencies
 COPY requirements.txt /tmp/requirements.txt
-RUN pip install -r /tmp/requirements.txt
+RUN pip install --require-hashes -r /tmp/requirements.txt
 
 WORKDIR /var/consumer-edge-install
 
